--- a/src/components/ChatSection.css
+++ b/src/components/ChatSection.css
@@ -1,4 +1,292 @@
 .chatSection{
     flex: 70%;
-    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    position: sticky;
+}
+
+.chatHeader{
+    height: 59px;
+    width: 100%;
+    background-color: #ededed;
+    border-left: 1px solid rgba(0, 0, 0, 0.08);
+    display:  flex;
+    align-items: center;
+    padding: 10px 16px;
+}
+
+.chatHeader-avatar{
+    padding-right: 15px;
+}
+
+.chatHeader-description{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.chatHeader-description > h3{
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.chatHeader-description > p{
+    font-size: 13px;
+    color: rgba(0,0,0,.5);
+}
+
+.chatHeader-options{
+    display: flex;
+}
+
+.chatHeader-options > *{
+    padding: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.header-optMoreVertIcon > .MuiSvgIcon-root{
+    margin-left: 10px;
+}
+
+.chatHeader-options > * > .MuiSvgIcon-root{
+    cursor: pointer;
+}
+
+/*Chat Screen*/
+.chatScreen{
+    flex: 1;
+    width: 100%;
+    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    overflow-y: scroll;
+    padding-bottom: 55px;
+}
+
+.chatScreen::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+/*Writing section*/
+.writeChatSection{
+    height: 59px;
+    width: 100%;
+    background-color: #ededed;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-left: 1px solid rgba(0, 0, 0, 0.08);
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+}
+
+.writeSection-media{
+    padding: 5px 10px;
+    display: flex;
+}
+
+.writeSection-media > *{
+    margin-left: 15px;
+    font-size: 26px !important;
+}
+
+.attach-file{
+    position: relative;
+}
+
+.attach-file > ul{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 200%;
+    left: -17px;
+    width: 51px;
+    transform: scale(1) translateY(0);
+    transition: transform .2s ease-in;
+}
+
+.attach-file > ul.hidden{
+    transition: transform .2s ease-out;
+    transform: scale(0) translateY(-100%);
+}
+
+.attach-file > ul > .img-upload{
+    list-style: none;
+    height: 53px;
+    width: 53px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: linear-gradient(0deg, #ac44cf 50%, #bf59cf 50%);
+    box-shadow: 0px 2px 4px #000;
+}
+
+.attach-file > ul > li > input{
+    display: none;
+}
+
+.attach-file > ul > li > label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+}
+
+.attach-file > ul > li > label > .MuiSvgIcon-root{
+    color: #fff;
+}
+
+.writeSection-media > .MuiSvgIcon-root:last-child{
+    transform: rotate(45deg);
+}
+
+.writeChatSection > .writeSection{
+    flex: 1;
+}
+
+.writeChatSection .MuiSvgIcon-root{
+    cursor: pointer;
+}
+
+.writeInput{
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 27px;
+    width: 95%;
+    padding: 9px 12px 14px;
+    margin: 5px 10px;
+}
+
+.writeInput > input{
+    border: none;
+    font-size: 14px;
+    outline-width: 0;
+    width: 100%;
+}
+
+.writeInput > input::placeholder{
+    color: #999999;
+}
+
+.writeSection-right{
+    flex: .05;
+}
+
+.writeSendAction{
+    padding: 5px 2px;
+    display: flex;
+    align-items: center;
+}
+
+.writeSendAction > .MuiSvgIcon-root{
+    font-size: 26px;
+}
+
+/*Preview Section*/
+.file-preview{
+    flex: 1;
+    height: calc(100% - 59px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: sticky;
+}
+
+.file-preview > .preview-header{
+    background-color: #00BFA5;
+    height: 49px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 25px;
+    display: flex;
+}
+
+.preview-header > .preview-close{
+    display: flex;
+    align-items: center;
+    flex: .1;
+    cursor: pointer;
+}
+
+.preview-close > .MuiSvgIcon-root{
+    color: #B2ECE4;
+}
+
+.preview-header > h2{
+    color: #fff;
+    font-size: 19px;
+    font-weight: 400;
+    flex: 2;
+}
+
+.preview-content{
+    background-color: #E6E6E6;
+    flex: 1;
+    height: calc(100% - 49px - 130px);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.preview-content > img{
+    max-width: 70%;
+    max-height: 90%;
+}
+
+.preview-send{
+    width: 100%;
+    height: 130px;
+    background-color: #D9D9D9;
+    position: relative;
+}
+
+.preview-send-btn{
+    background-color: #0DE861;
+    border-radius: 50%;
+    border: none;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    top: -30px;
+    right: 30px;
+    cursor: pointer;
+}
+
+
+.preview-send-btn > .MuiSvgIcon-root{
+    color: #fff;
+}
+
+.upload-progress{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.upload-progress .MuiCircularProgress-root{
+    color: #00BFA5 !important;
+}
+
+.upload-progress .MuiTypography-root{
+    color: #fff !important;
+}
+
+.upload-progress.hidden{
+    display: none;
 }
